# LaunchPad

./: README.md
daemon/: .env  Cargo.toml  README.md
daemon/migrations/: 0001_init.sql  0002_extras.sql
daemon/setup/: volumes.sh
daemon/src/: main.rs
daemon/src/api/: apps.rs  auth.rs  exec.rs  files.rs  logs.rs  mod.rs  monitoring.rs  network.rs  ports.rs  power.rs  routes.rs  servers.rs  tokens.rs  webhooks.rs  websocket.rs
daemon/src/config/: loader.rs  mod.rs
daemon/src/db/: mod.rs  queries.rs
daemon/src/docker/: client.rs  container.rs  mod.rs  policy.rs  templates.json  templates.rs
daemon/src/filesystem/: files.rs
daemon/src/monitoring/: client.rs  mod.rs  stats.rs
daemon/src/server/: mod.rs  ports.rs
demo/: .env  Cargo.toml
demo/src/: main.rs
demo/src/api/: apps.rs  auth.rs  logs.rs  monitoring.rs  routes.rs  types.rs  websocket.rs
demo/src/config/: loader.rs
demo/src/db/: queries.rs
demo/src/docker/: client.rs  policy.rs  templates.json
demo/src/server/: manager.rs  mod.rs  state.rs
panel/: README.md
