[package]
name = "daemon"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
bollard = "0.20.2"
chrono = "0.4.44"
dotenvy = "0.15.7"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
sysinfo = "0.38.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower = "0.4.13"
tower-http = { version = "0.6.8", features = ["cors", "timeout", "compression-gzip"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
portable-pty = "0.8"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
russh = "0.60.0"
russh-sftp = "2.1.1"
once_cell = "1.21.4"
